<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:baselineAligned="false" android:orientation="vertical">
        <TextView android:id="@+id/duoTube" android:layout_width="fill_parent" android:layout_height="fill_parent" android:gravity="center_vertical|center_horizontal" android:textColor="#00FF00" android:text="Tube Type 6L6" />
    <com.ice.optionplayer.OptionGraph android:id="@+id/graphduo" android:layout_width="wrap_content" android:layout_height="200dp"
        android:layout_gravity="center_horizontal" />
    <TableLayout android:layout_width="match_parent" android:id="@+id/tableLayout1" android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
    

       <TableRow android:id="@+id/duoTable1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:gravity="center_vertical|center_horizontal"
           android:layout_gravity="center_horizontal">
        <TextView android:gravity="center_vertical|center_horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textColor="#00FF00" android:text=" " />
       </TableRow>
    </TableLayout>
    			
    <TableLayout android:layout_width="match_parent" android:id="@+id/tableLayout2" android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
           <TableRow android:id="@+id/duoTable3" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView  android:layout_width="fill_parent" android:layout_height="wrap_content"  android:text=" " />  
                <TextView  android:layout_width="fill_parent" android:layout_height="wrap_content"  android:text="  " />  
                                                                                                                              
       </TableRow>
        <TableRow android:id="@+id/duoTable4" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:id="@+id/leg1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textColor="#00FF00" android:text="@string/value1" /> 
                <TextView android:id="@+id/leg1val" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textColor="#FFFF00" android:text="" />    
       </TableRow>
       <TableRow>
                <TextView android:id="@+id/leg2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textColor="#00FF00" android:text="@string/value2" /> 
                <TextView android:id="@+id/leg2val" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:textColor="#FFFF00" android:text="" />  
       </TableRow>
       <TableRow>                          
                <TextView android:id="@+id/leg3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textColor="#00FF00" android:text="@string/value3" />  
                <TextView android:id="@+id/leg3val" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:textColor="#FFFF00" android:text="" /> 
       </TableRow>
       <TableRow>    
                <TextView android:id="@+id/leg4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textColor="#00FF00" android:text="@string/value4" />
                <TextView android:id="@+id/leg4val" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:textColor="#FFFF00" android:text="" />  
     
       </TableRow>

    </TableLayout>
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text=" "  />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"  android:text="@string/slider1"  />
    <SeekBar android:id="@+id/plateVoltage" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:max="500"  android:progress="380" android:secondaryProgress="350" />
    <TextView android:layout_width="fill_parent"  android:layout_height="wrap_content" android:text="@string/slider2" />
    <LinearLayout android:layout_width="match_parent" android:layout_gravity="bottom" android:id="@+id/linearLayout1" android:layout_height="match_parent">
      <SeekBar android:layout_width="fill_parent" android:max="300" android:secondaryProgress="75" android:id="@+id/screenVoltage" android:progress="50" android:layout_height="match_parent" android:layout_gravity="bottom"></SeekBar>
     </LinearLayout>

</LinearLayout>